Fix some alignments and icons

--- a/src/components/body/body.css
+++ b/src/components/body/body.css
@@ -218,7 +218,7 @@
 
 .anchors{
     display: flex;
-    margin-left:60px;
+    margin-left:80px;
     justify-content: space-around;
     margin-top: 20px;
     margin-right: 60px;
