--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -58,3 +58,6 @@
     height: 50px;
     width: 90px;
 }
+.market-anc{
+  text-decoration: none;
+}
